sumo/tests/traci/PositionConversion/InvalidPosOnRoad/testclient.prog
simstep 1 1
posconversion_roadpos e_m0 -1 0 3
simstep 2 1
